fix button on mobile

--- a/css/quiz.css
+++ b/css/quiz.css
@@ -99,6 +99,7 @@ button.btn {
   padding: 5px 5px;
   border: 5px solid;
   cursor: pointer;
+  background-color:#FFF
 }
 .next-btn,
 .start-btn {
